syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";
option go_package = "/gen/go";


service AuthService {
    rpc signIn(SignInRequest) returns (SignInResponse){
        option (google.api.http) = {
            post: "/user/signIn"
            body: "*"
        };
    };
    
}

service ProfileService {
    rpc signUp (SignUpRequest) returns (SignUpResponse){
        option (google.api.http) = {
            post: "/user/signUp"
            body: "*"
        };
    };
    rpc updateProfile (UpdateProfileRequest) returns (UpdateUserProfileResponse){
        option (google.api.http) = {
            post: "/user/updateProfile"
            body: "*"
        };

    }; 
    rpc isUserCorrect(isUserCorrectRequest) returns (isUserCorrectResponse);
    rpc viewProfile(viewProfileRequest) returns (viewProfileResponse)
    {
        option (google.api.http) = {
            post: "/user/viewProfile"
            body: "*"
        };
    
    };
}

message SignUpRequest {
    string username = 1;
    string password = 2;
}


message SignUpResponse {
    string notification =1;
}

message UpdateProfileRequest {
    string accessToken = 1;
    string fullName = 2;
    google.protobuf.Timestamp birthday = 3;
    string address = 4;
    string email = 5;
    string phone = 6;

}

message UpdateUserProfileResponse {
    string notification =1;
}

message SignInRequest {
    string username = 1;
    string password = 2;
}

message SignInResponse {
    bool isLogin = 1;
    string accessToken = 2;
}

message isUserCorrectRequest {
    string username = 1;
    string password = 2;
}

message isUserCorrectResponse {
    bool isCorrect = 1;
    string id = 2;
}

message viewProfileRequest {
    string accessToken = 1;
}


message viewProfileResponse {
    string fullName = 1;
    google.protobuf.Timestamp birthday = 2;
    string address = 3;
    string email = 4;
    string phone = 5;
}